# llmm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
sample_manifests/: large.yaml  medium.yaml  small.yaml
src/llmm/: cli.py
