[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmm"
version = "1.0.0"
description = "Large Language Model Manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface_hub>=0.23",
    "pyyaml>=6.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.scripts]
llmm = "llmm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]